--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "target": "es5",
+    "target": "es2017",
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
-    "module": "CommonJS",
+    "module": "commonjs",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "incremental": true,
