--- a/server/package.json
+++ b/server/package.json
@@ -5,22 +5,21 @@
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node --esm' src/app.ts",
     "build": "tsc",
-    "start": "node dist/src/app.js"
+    "start": "node dist/app.js"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.4.10",
+    "@types/node": "^12.0.0",
     "nodemon": "^3.0.1",
-
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^4.1.6"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0"
+    "mysql2": "^2.0.0"
   }
 }
